--- a/index.html
+++ b/index.html
@@ -2,12 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
     <link rel="stylesheet/less" type="text/css" href="styles/grid.less"/>
     <link rel="stylesheet/less" type="text/css" href="styles/button.less"/>
     <link rel="stylesheet/less" type="text/css" href="styles/modal.less"/>
     <link rel="stylesheet/less" type="text/css" href="styles/burger.less"/>
+    <link rel="stylesheet/less" type="text/css" href="styles/slider.less"/>
+
+    <title>Title</title>
+
+
 </head>
 <body>
 
@@ -18,7 +24,7 @@
             <div class="line"></div>
             <div class="line"></div>
             <div class="line"></div>
-        </div> <!--BURGER MENU-->
+        </div>
         <nav>
             <ul class="nav-menu">
                 <li><a href="#">Home</a></li>
@@ -231,46 +237,60 @@
     </div>
 </div>
 
-
-<a href="#" class="btn btn-danger">danger!</a>
-<button type="button" class="btn btn-primary">primary</button>
-<button type="submit" class="btn btn-warning">warning</button>
-<div class="btn btn-success">success</div>
-<span class="btn btn-dark">dark</span>
-<label for="danger">Input button: </label>
-<input type="button" id="danger" value="danger" class="btn btn-danger">
-<button type="button" class="btn btn-outline-primary">outline primary</button>
-<button type="submit" class="btn btn-outline-success">outline success</button>
-<a href="#" class="btn btn-outline-warning">outline warning</a>
-<span class="btn btn-outline-dark">outline dark</span>
-<div class="btn btn-outline-info">outline info</div>
-<button type="button" class="btn btn-success" disabled>disabled button</button>
-<a href="#" class="btn btn-outline-dark" aria-disabled="true">disabled link</a>
-<button class="btn btn-primary active">primary active</button>
-
-<button class="btn btn-outline-dark" type="button" data-modal-target="#modal">Open modal</button>
-<div class="modal" id="modal">
-    <div class="modal-header">
-        <h2>Modal window is just opened</h2>
-        <button data-close-button class="close-button">&times;</button>
+<section>
+    <a href="#" class="btn btn-danger">danger!</a>
+    <button type="button" class="btn btn-primary">primary</button>
+    <button type="submit" class="btn btn-warning">warning</button>
+    <div class="btn btn-success">success</div>
+    <span class="btn btn-dark">dark</span>
+    <label for="danger">Input button: </label>
+    <input type="button" id="danger" value="danger" class="btn btn-danger">
+    <button type="button" class="btn btn-outline-primary">outline primary</button>
+    <button type="submit" class="btn btn-outline-success">outline success</button>
+    <a href="#" class="btn btn-outline-warning">outline warning</a>
+    <span class="btn btn-outline-dark">outline dark</span>
+    <div class="btn btn-outline-info">outline info</div>
+    <button type="button" class="btn btn-success" disabled>disabled button</button>
+    <a href="#" class="btn btn-outline-dark" aria-disabled="true">disabled link</a>
+    <button class="btn btn-primary active">primary active</button>
+</section>
+<section>
+    <button class="btn btn-outline-dark" type="button" data-modal-target="#modal">Open modal</button>
+    <div class="modal" id="modal">
+        <div class="modal-header">
+            <h2>Modal window is just opened</h2>
+            <button data-close-button class="close-button">&times;</button>
+        </div>
+        <div class="modal-body">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad asperiores assumenda consequatur culpa eius
+            explicabo illum incidunt ipsa iste itaque mollitia neque, nisi obcaecati, optio perferendis sapiente, sint
+            sit
+            totam? Iste magnam natus pariatur saepe! Autem ea eius, eum iure laborum obcaecati repellendus repudiandae
+            voluptate! Assumenda dolor doloribus id incidunt officiis rerum. Accusantium aliquid architecto doloremque
+            nobis
+            quos, tempore voluptatibus?
+        </div>
     </div>
-    <div class="modal-body">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad asperiores assumenda consequatur culpa eius
-        explicabo illum incidunt ipsa iste itaque mollitia neque, nisi obcaecati, optio perferendis sapiente, sint sit
-        totam? Iste magnam natus pariatur saepe! Autem ea eius, eum iure laborum obcaecati repellendus repudiandae
-        voluptate! Assumenda dolor doloribus id incidunt officiis rerum. Accusantium aliquid architecto doloremque nobis
-        quos, tempore voluptatibus?
+    <div id="overlay"></div>
+</section>
+<section>
+    <div class="carousel-container">
+        <div class="carousel-slide">
+            <img src="img/carousel1.jpg" alt="1">
+            <img src="img/carousel2.jpg" alt="2">
+            <img src="img/carousel3.jpg" alt="3">
+            <img src="img/carousel4.jpg" alt="4">
+        </div>
     </div>
-    <div class="modal-footer">
-
-    </div>
-</div>
-<div id="overlay"></div>
+    <button type="button" id="prevButton">prev</button>
+    <button type="button" id="nextButton">next</button>
+</section>
 
 
 <script src="//cdnjs.cloudflare.com/ajax/libs/less.js/3.9.0/less.min.js"></script>
 <script src="js/modal.js"></script>
 <script src="js/burger.js"></script>
+<script src="js/slider.js"></script>
 
 </body>
 </html>
