--- a/index.html
+++ b/index.html
@@ -276,10 +276,10 @@
 <section>
     <div class="carousel-container">
         <div class="carousel-slide">
-            <img src="img/carousel1.jpg" alt="1">
-            <img src="img/carousel2.jpg" alt="2">
-            <img src="img/carousel3.jpg" alt="3">
-            <img src="img/carousel4.jpg" alt="4">
+            <img class="carousel-img" src="img/carousel1.jpg" alt="1">
+            <img class="carousel-img" src="img/carousel2.jpg" alt="2">
+            <img class="carousel-img" src="img/carousel3.jpg" alt="3">
+            <img class="carousel-img" src="img/carousel4.jpg" alt="4">
         </div>
     </div>
     <button type="button" id="prevButton">prev</button>
