fix button on carousel

--- a/index.html
+++ b/index.html
@@ -281,13 +281,15 @@
             <img class="carousel-img" src="img/carousel3.jpg" alt="3">
             <img class="carousel-img" src="img/carousel4.jpg" alt="4">
         </div>
+        <button type="button" id="prevButton"><i class="fas fa-arrow-left fa-2x"></i></button>
+        <button type="button" id="nextButton"><i class="fas fa-arrow-right fa-2x"></i></button>
     </div>
-    <button type="button" id="prevButton">prev</button>
-    <button type="button" id="nextButton">next</button>
 </section>
 
 
 <script src="//cdnjs.cloudflare.com/ajax/libs/less.js/3.9.0/less.min.js"></script>
+<script src="https://kit.fontawesome.com/a92211bf3b.js" crossorigin="anonymous"></script>
+
 <script src="js/modal.js"></script>
 <script src="js/burger.js"></script>
 <script src="js/slider.js"></script>
