--- a/index.html
+++ b/index.html
@@ -276,10 +276,10 @@
 <section>
     <div class="carousel-container">
         <div class="carousel-slide">
-            <img class="carousel-img" src="img/carousel1.jpg" alt="1">
-            <img class="carousel-img" src="img/carousel2.jpg" alt="2">
-            <img class="carousel-img" src="img/carousel3.jpg" alt="3">
-            <img class="carousel-img" src="img/carousel4.jpg" alt="4">
+            <img src="img/carousel1.jpg" alt="img1">
+            <img src="img/carousel2.jpg" alt="img2">
+            <img src="img/carousel3.jpg" alt="img3">
+            <img src="img/carousel4.jpg" alt="img4">
         </div>
         <button type="button" id="prevButton"><i class="fas fa-arrow-left fa-2x"></i></button>
         <button type="button" id="nextButton"><i class="fas fa-arrow-right fa-2x"></i></button>
