--- a/index.html
+++ b/index.html
@@ -1,215 +1,215 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+  <meta charset="UTF-8">
+  <title>Title</title>
 
-    <link rel="stylesheet/less" type="text/css" href="styles/grid.less"/>
-    <link rel="stylesheet/less" type="text/css" href="styles/button.less"/>
-    <link rel="stylesheet/less" type="text/css" href="styles/modal.less"/>
+  <link rel="stylesheet/less" type="text/css" href="styles/grid.less"/>
+  <link rel="stylesheet/less" type="text/css" href="styles/button.less"/>
+  <link rel="stylesheet/less" type="text/css" href="styles/modal.less"/>
 </head>
 <body>
 <div class="container-fluid">
-    <div class="flex-row">
-        <div class="col-1">
-            <div class="flex-item-style">
-                col-1 row-1
-            </div>
-        </div>
-        <div class="col-1">
-            <div class="flex-item-style">
-                col-1 row-1
-            </div>
-        </div>
-        <div class="col-1">
-            <div class="flex-item-style">
-                col-1 row-1
-            </div>
-        </div>
-        <div class="col-1">
-            <div class="flex-item-style">
-                col-1 row-1
-            </div>
-        </div>
-        <div class="col-1">
-            <div class="flex-item-style">
-                col-1 row-1
-            </div>
-        </div>
-        <div class="col-1">
-            <div class="flex-item-style">
-                col-1 row-1
-            </div>
-        </div>
-        <div class="col-1">
-            <div class="flex-item-style">
-                col-1 row-1
-            </div>
-        </div>
-        <div class="col-1">
-            <div class="flex-item-style">
-                col-1 row-1
-            </div>
-        </div>
-        <div class="col-1">
-            <div class="flex-item-style">
-                col-1 row-1
-            </div>
-        </div>
-        <div class="col-1">
-            <div class="flex-item-style">
-                col-1 row-1
-            </div>
-        </div>
-        <div class="col-1">
-            <div class="flex-item-style">
-                col-1 row-1
-            </div>
-        </div>
-        <div class="col-1">
-            <div class="flex-item-style">
-                col-1 row-1
-            </div>
-        </div>
+  <div class="flex-row">
+    <div class="col-1">
+      <div class="flex-item-style">
+        col-1 row-1
+      </div>
     </div>
-    <div class="flex-row">
-        <div class="col-2">
-            <div class="flex-item-style">
-                col-2 row-2
-            </div>
-        </div>
-        <div class="col-2">
-            <div class="flex-item-style">
-                col-2 row-2
-            </div>
-        </div>
-        <div class="col-2">
-            <div class="flex-item-style">
-                col-2 row-2
-            </div>
-        </div>
-        <div class="col-2">
-            <div class="flex-item-style">
-                col-2 row-2
-            </div>
-        </div>
-        <div class="col-2">
-            <div class="flex-item-style">
-                col-2 row-2
-            </div>
-        </div>
-        <div class="col-2">
-            <div class="flex-item-style">
-                col-2 row-2
-            </div>
-        </div>
+    <div class="col-1">
+      <div class="flex-item-style">
+        col-1 row-1
+      </div>
     </div>
-    <div class="flex-row">
-        <div class="col-3">
-            <div class="flex-item-style">
-                col-3 row-3
-            </div>
-        </div>
-        <div class="col-3">
-            <div class="flex-item-style">
-                col-3 row-3
-            </div>
-        </div>
-        <div class="col-3">
-            <div class="flex-item-style">
-                col-3 row-3
-            </div>
-        </div>
-        <div class="col-3">
-            <div class="flex-item-style">
-                col-3 row-3
-            </div>
-        </div>
+    <div class="col-1">
+      <div class="flex-item-style">
+        col-1 row-1
+      </div>
     </div>
-    <div class="flex-row">
-        <div class="col-4">
-            <div class="flex-item-style">
-                col-4 row 4
-            </div>
-        </div>
-        <div class="col-4">
-            <div class="flex-item-style">
-                col-4 row 4
-            </div>
-        </div>
-        <div class="col-4">
-            <div class="flex-item-style">
-                col-4 row 4
-            </div>
-        </div>
+    <div class="col-1">
+      <div class="flex-item-style">
+        col-1 row-1
+      </div>
     </div>
-    <div class="flex-row">
-        <div class="col-6">
-            <div class="flex-item-style">
-                col-6 row 5
-            </div>
-        </div>
-        <div class="col-6">
-            <div class="flex-item-style">
-                col-6 row 5
-            </div>
-        </div>
+    <div class="col-1">
+      <div class="flex-item-style">
+        col-1 row-1
+      </div>
     </div>
-    <div class="flex-row">
-        <div class="col-12">
-            <div class="flex-item-style">
-                col-12 row 6
-            </div>
-        </div>
+    <div class="col-1">
+      <div class="flex-item-style">
+        col-1 row-1
+      </div>
     </div>
-    <div class="flex-row">
-        <div class="col-1">
-            <div class="flex-item-style">col-1 row 7</div>
-        </div>
-        <div class="col-11">
-            <div class="flex-item-style">col-11 row 7</div>
-        </div>
+    <div class="col-1">
+      <div class="flex-item-style">
+        col-1 row-1
+      </div>
     </div>
-    <div class="flex-row">
-        <div class="col-2">
-            <div class="flex-item-style">col-2 row 8</div>
-        </div>
-        <div class="col-10">
-            <div class="flex-item-style">col-10 row 8</div>
-        </div>
+    <div class="col-1">
+      <div class="flex-item-style">
+        col-1 row-1
+      </div>
     </div>
-    <div class="flex-row">
-        <div class="col-3">
-            <div class="flex-item-style">col-3 row 9</div>
-        </div>
-        <div class="col-9">
-            <div class="flex-item-style">col-9 row 9</div>
-        </div>
+    <div class="col-1">
+      <div class="flex-item-style">
+        col-1 row-1
+      </div>
     </div>
-    <div class="flex-row">
-        <div class="col-4">
-            <div class="flex-item-style">col-4 row 9</div>
-        </div>
-        <div class="col-8">
-            <div class="flex-item-style">col-8 row 9</div>
-        </div>
+    <div class="col-1">
+      <div class="flex-item-style">
+        col-1 row-1
+      </div>
     </div>
-    <div class="flex-row">
-        <div class="col-5">
-            <div class="flex-item-style">col-5 row 10</div>
-        </div>
-        <div class="col-7">
-            <div class="flex-item-style">col-7 row 10</div>
-        </div>
+    <div class="col-1">
+      <div class="flex-item-style">
+        col-1 row-1
+      </div>
     </div>
-    <div class="flex-row">
-        <div class="col-4">
-            <div class="flex-item-style">col-4 row 11 (overflow)</div>
-        </div>
-        <div class="col-9">
-            <div class="flex-item-style">col-9 row 11 (overflow)</div>
-        </div>
+    <div class="col-1">
+      <div class="flex-item-style">
+        col-1 row-1
+      </div>
     </div>
+  </div>
+  <div class="flex-row">
+    <div class="col-2">
+      <div class="flex-item-style">
+        col-2 row-2
+      </div>
+    </div>
+    <div class="col-2">
+      <div class="flex-item-style">
+        col-2 row-2
+      </div>
+    </div>
+    <div class="col-2">
+      <div class="flex-item-style">
+        col-2 row-2
+      </div>
+    </div>
+    <div class="col-2">
+      <div class="flex-item-style">
+        col-2 row-2
+      </div>
+    </div>
+    <div class="col-2">
+      <div class="flex-item-style">
+        col-2 row-2
+      </div>
+    </div>
+    <div class="col-2">
+      <div class="flex-item-style">
+        col-2 row-2
+      </div>
+    </div>
+  </div>
+  <div class="flex-row">
+    <div class="col-3">
+      <div class="flex-item-style">
+        col-3 row-3
+      </div>
+    </div>
+    <div class="col-3">
+      <div class="flex-item-style">
+        col-3 row-3
+      </div>
+    </div>
+    <div class="col-3">
+      <div class="flex-item-style">
+        col-3 row-3
+      </div>
+    </div>
+    <div class="col-3">
+      <div class="flex-item-style">
+        col-3 row-3
+      </div>
+    </div>
+  </div>
+  <div class="flex-row">
+    <div class="col-4">
+      <div class="flex-item-style">
+        col-4 row 4
+      </div>
+    </div>
+    <div class="col-4">
+      <div class="flex-item-style">
+        col-4 row 4
+      </div>
+    </div>
+    <div class="col-4">
+      <div class="flex-item-style">
+        col-4 row 4
+      </div>
+    </div>
+  </div>
+  <div class="flex-row">
+    <div class="col-6">
+      <div class="flex-item-style">
+        col-6 row 5
+      </div>
+    </div>
+    <div class="col-6">
+      <div class="flex-item-style">
+        col-6 row 5
+      </div>
+    </div>
+  </div>
+  <div class="flex-row">
+    <div class="col-12">
+      <div class="flex-item-style">
+        col-12 row 6
+      </div>
+    </div>
+  </div>
+  <div class="flex-row">
+    <div class="col-1">
+      <div class="flex-item-style">col-1 row 7</div>
+    </div>
+    <div class="col-11">
+      <div class="flex-item-style">col-11 row 7</div>
+    </div>
+  </div>
+  <div class="flex-row">
+    <div class="col-2">
+      <div class="flex-item-style">col-2 row 8</div>
+    </div>
+    <div class="col-10">
+      <div class="flex-item-style">col-10 row 8</div>
+    </div>
+  </div>
+  <div class="flex-row">
+    <div class="col-3">
+      <div class="flex-item-style">col-3 row 9</div>
+    </div>
+    <div class="col-9">
+      <div class="flex-item-style">col-9 row 9</div>
+    </div>
+  </div>
+  <div class="flex-row">
+    <div class="col-4">
+      <div class="flex-item-style">col-4 row 9</div>
+    </div>
+    <div class="col-8">
+      <div class="flex-item-style">col-8 row 9</div>
+    </div>
+  </div>
+  <div class="flex-row">
+    <div class="col-5">
+      <div class="flex-item-style">col-5 row 10</div>
+    </div>
+    <div class="col-7">
+      <div class="flex-item-style">col-7 row 10</div>
+    </div>
+  </div>
+  <div class="flex-row">
+    <div class="col-4">
+      <div class="flex-item-style">col-4 row 11 (overflow)</div>
+    </div>
+    <div class="col-9">
+      <div class="flex-item-style">col-9 row 11 (overflow)</div>
+    </div>
+  </div>
 </div>
 
 
@@ -231,20 +231,33 @@
 
 <button class="btn btn-outline-dark" type="button" data-modal-target="#modal">Open modal</button>
 <div class="modal" id="modal">
-    <div class="modal-header">
-        <h2>Modal window is just opened</h2>
-        <button data-close-button class="close-button">&times;</button>
-    </div>
-    <div class="modal-body">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad asperiores assumenda consequatur culpa eius
-        explicabo illum incidunt ipsa iste itaque mollitia neque, nisi obcaecati, optio perferendis sapiente, sint sit
-        totam? Iste magnam natus pariatur saepe! Autem ea eius, eum iure laborum obcaecati repellendus repudiandae
-        voluptate! Assumenda dolor doloribus id incidunt officiis rerum. Accusantium aliquid architecto doloremque nobis
-        quos, tempore voluptatibus?
-    </div>
-    <div class="modal-footer">
+  <div class="modal-header">
+    <h2>Modal window is just opened</h2>
+    <button data-close-button class="close-button">&times;</button>
+  </div>
+  <div class="modal-body">
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad asperiores assumenda consequatur culpa eius
+    explicabo illum incidunt ipsa iste itaque mollitia neque, nisi obcaecati, optio perferendis sapiente, sint sit
+    totam? Iste magnam natus pariatur saepe! Autem ea eius, eum iure laborum obcaecati repellendus repudiandae
+    voluptate! Assumenda dolor doloribus id incidunt officiis rerum. Accusantium aliquid architecto doloremque nobis
+    quos, tempore voluptatibus?
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-danger" data-modal-target="#modal2">Click me</button>
+  </div>
+</div>
 
-    </div>
+<div class="modal modal-top" id="modal2">
+  <div class="modal-header">
+    <h2>Another one</h2>
+    <button data-close-button class="close-button">&times;</button>
+  </div>
+  <div class="modal-body">
+    Hmm... What's happened? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi blanditiis error esse eum
+    explicabo fugiat incidunt inventore ipsa laudantium maiores maxime minima necessitatibus nemo nihil, odio officiis
+    omnis porro praesentium repellat repellendus sed tenetur totam vitae voluptas voluptatibus. Debitis eligendi quam
+    sint. Distinctio dolorum ipsa odio quaerat quasi. Totam, vero.
+  </div>
 </div>
 
 <div id="overlay"></div>
