fix burger menu

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Title</title>
 
     <link rel="stylesheet/less" type="text/css" href="styles/grid.less"/>
@@ -10,15 +11,14 @@
     <link rel="stylesheet/less" type="text/css" href="styles/burger.less"/>
 </head>
 <body>
-
 <header class="header">
     <div class="header__container">
-        <h1 class="header_brand">Logo</h1>
+        <h1 class="header__brand">Logo</h1>
         <div class="burger" id="burger">
             <div class="line"></div>
             <div class="line"></div>
             <div class="line"></div>
-        </div> <!--BURGER MENU-->
+        </div>
         <nav>
             <ul class="nav-menu">
                 <li><a href="#">Home</a></li>
@@ -28,208 +28,210 @@
         </nav>
     </div>
 </header>
-<div class="container-fluid">
-    <div class="flex-row">
-        <div class="col-1">
-            <div class="flex-item-style">
-                col-1 row-1
+<main>
+    <div class="container-fluid">
+        <div class="flex-row">
+            <div class="col-1">
+                <div class="flex-item-style">
+                    col-1 row-1
+                </div>
+            </div>
+            <div class="col-1">
+                <div class="flex-item-style">
+                    col-1 row-1
+                </div>
+            </div>
+            <div class="col-1">
+                <div class="flex-item-style">
+                    col-1 row-1
+                </div>
+            </div>
+            <div class="col-1">
+                <div class="flex-item-style">
+                    col-1 row-1
+                </div>
+            </div>
+            <div class="col-1">
+                <div class="flex-item-style">
+                    col-1 row-1
+                </div>
+            </div>
+            <div class="col-1">
+                <div class="flex-item-style">
+                    col-1 row-1
+                </div>
+            </div>
+            <div class="col-1">
+                <div class="flex-item-style">
+                    col-1 row-1
+                </div>
+            </div>
+            <div class="col-1">
+                <div class="flex-item-style">
+                    col-1 row-1
+                </div>
+            </div>
+            <div class="col-1">
+                <div class="flex-item-style">
+                    col-1 row-1
+                </div>
+            </div>
+            <div class="col-1">
+                <div class="flex-item-style">
+                    col-1 row-1
+                </div>
+            </div>
+            <div class="col-1">
+                <div class="flex-item-style">
+                    col-1 row-1
+                </div>
+            </div>
+            <div class="col-1">
+                <div class="flex-item-style">
+                    col-1 row-1
+                </div>
             </div>
         </div>
-        <div class="col-1">
-            <div class="flex-item-style">
-                col-1 row-1
+        <div class="flex-row">
+            <div class="col-2">
+                <div class="flex-item-style">
+                    col-2 row-2
+                </div>
+            </div>
+            <div class="col-2">
+                <div class="flex-item-style">
+                    col-2 row-2
+                </div>
+            </div>
+            <div class="col-2">
+                <div class="flex-item-style">
+                    col-2 row-2
+                </div>
+            </div>
+            <div class="col-2">
+                <div class="flex-item-style">
+                    col-2 row-2
+                </div>
+            </div>
+            <div class="col-2">
+                <div class="flex-item-style">
+                    col-2 row-2
+                </div>
+            </div>
+            <div class="col-2">
+                <div class="flex-item-style">
+                    col-2 row-2
+                </div>
             </div>
         </div>
-        <div class="col-1">
-            <div class="flex-item-style">
-                col-1 row-1
+        <div class="flex-row">
+            <div class="col-3">
+                <div class="flex-item-style">
+                    col-3 row-3
+                </div>
+            </div>
+            <div class="col-3">
+                <div class="flex-item-style">
+                    col-3 row-3
+                </div>
+            </div>
+            <div class="col-3">
+                <div class="flex-item-style">
+                    col-3 row-3
+                </div>
+            </div>
+            <div class="col-3">
+                <div class="flex-item-style">
+                    col-3 row-3
+                </div>
             </div>
         </div>
-        <div class="col-1">
-            <div class="flex-item-style">
-                col-1 row-1
+        <div class="flex-row">
+            <div class="col-4">
+                <div class="flex-item-style">
+                    col-4 row 4
+                </div>
+            </div>
+            <div class="col-4">
+                <div class="flex-item-style">
+                    col-4 row 4
+                </div>
+            </div>
+            <div class="col-4">
+                <div class="flex-item-style">
+                    col-4 row 4
+                </div>
             </div>
         </div>
-        <div class="col-1">
-            <div class="flex-item-style">
-                col-1 row-1
+        <div class="flex-row">
+            <div class="col-6">
+                <div class="flex-item-style">
+                    col-6 row 5
+                </div>
+            </div>
+            <div class="col-6">
+                <div class="flex-item-style">
+                    col-6 row 5
+                </div>
             </div>
         </div>
-        <div class="col-1">
-            <div class="flex-item-style">
-                col-1 row-1
+        <div class="flex-row">
+            <div class="col-12">
+                <div class="flex-item-style">
+                    col-12 row 6
+                </div>
             </div>
         </div>
-        <div class="col-1">
-            <div class="flex-item-style">
-                col-1 row-1
+        <div class="flex-row">
+            <div class="col-1">
+                <div class="flex-item-style">col-1 row 7</div>
+            </div>
+            <div class="col-11">
+                <div class="flex-item-style">col-11 row 7</div>
             </div>
         </div>
-        <div class="col-1">
-            <div class="flex-item-style">
-                col-1 row-1
+        <div class="flex-row">
+            <div class="col-2">
+                <div class="flex-item-style">col-2 row 8</div>
+            </div>
+            <div class="col-10">
+                <div class="flex-item-style">col-10 row 8</div>
             </div>
         </div>
-        <div class="col-1">
-            <div class="flex-item-style">
-                col-1 row-1
+        <div class="flex-row">
+            <div class="col-3">
+                <div class="flex-item-style">col-3 row 9</div>
+            </div>
+            <div class="col-9">
+                <div class="flex-item-style">col-9 row 9</div>
             </div>
         </div>
-        <div class="col-1">
-            <div class="flex-item-style">
-                col-1 row-1
+        <div class="flex-row">
+            <div class="col-4">
+                <div class="flex-item-style">col-4 row 9</div>
+            </div>
+            <div class="col-8">
+                <div class="flex-item-style">col-8 row 9</div>
             </div>
         </div>
-        <div class="col-1">
-            <div class="flex-item-style">
-                col-1 row-1
+        <div class="flex-row">
+            <div class="col-5">
+                <div class="flex-item-style">col-5 row 10</div>
+            </div>
+            <div class="col-7">
+                <div class="flex-item-style">col-7 row 10</div>
             </div>
         </div>
-        <div class="col-1">
-            <div class="flex-item-style">
-                col-1 row-1
+        <div class="flex-row">
+            <div class="col-4">
+                <div class="flex-item-style">col-4 row 11 (overflow)</div>
+            </div>
+            <div class="col-9">
+                <div class="flex-item-style">col-9 row 11 (overflow)</div>
             </div>
         </div>
     </div>
-    <div class="flex-row">
-        <div class="col-2">
-            <div class="flex-item-style">
-                col-2 row-2
-            </div>
-        </div>
-        <div class="col-2">
-            <div class="flex-item-style">
-                col-2 row-2
-            </div>
-        </div>
-        <div class="col-2">
-            <div class="flex-item-style">
-                col-2 row-2
-            </div>
-        </div>
-        <div class="col-2">
-            <div class="flex-item-style">
-                col-2 row-2
-            </div>
-        </div>
-        <div class="col-2">
-            <div class="flex-item-style">
-                col-2 row-2
-            </div>
-        </div>
-        <div class="col-2">
-            <div class="flex-item-style">
-                col-2 row-2
-            </div>
-        </div>
-    </div>
-    <div class="flex-row">
-        <div class="col-3">
-            <div class="flex-item-style">
-                col-3 row-3
-            </div>
-        </div>
-        <div class="col-3">
-            <div class="flex-item-style">
-                col-3 row-3
-            </div>
-        </div>
-        <div class="col-3">
-            <div class="flex-item-style">
-                col-3 row-3
-            </div>
-        </div>
-        <div class="col-3">
-            <div class="flex-item-style">
-                col-3 row-3
-            </div>
-        </div>
-    </div>
-    <div class="flex-row">
-        <div class="col-4">
-            <div class="flex-item-style">
-                col-4 row 4
-            </div>
-        </div>
-        <div class="col-4">
-            <div class="flex-item-style">
-                col-4 row 4
-            </div>
-        </div>
-        <div class="col-4">
-            <div class="flex-item-style">
-                col-4 row 4
-            </div>
-        </div>
-    </div>
-    <div class="flex-row">
-        <div class="col-6">
-            <div class="flex-item-style">
-                col-6 row 5
-            </div>
-        </div>
-        <div class="col-6">
-            <div class="flex-item-style">
-                col-6 row 5
-            </div>
-        </div>
-    </div>
-    <div class="flex-row">
-        <div class="col-12">
-            <div class="flex-item-style">
-                col-12 row 6
-            </div>
-        </div>
-    </div>
-    <div class="flex-row">
-        <div class="col-1">
-            <div class="flex-item-style">col-1 row 7</div>
-        </div>
-        <div class="col-11">
-            <div class="flex-item-style">col-11 row 7</div>
-        </div>
-    </div>
-    <div class="flex-row">
-        <div class="col-2">
-            <div class="flex-item-style">col-2 row 8</div>
-        </div>
-        <div class="col-10">
-            <div class="flex-item-style">col-10 row 8</div>
-        </div>
-    </div>
-    <div class="flex-row">
-        <div class="col-3">
-            <div class="flex-item-style">col-3 row 9</div>
-        </div>
-        <div class="col-9">
-            <div class="flex-item-style">col-9 row 9</div>
-        </div>
-    </div>
-    <div class="flex-row">
-        <div class="col-4">
-            <div class="flex-item-style">col-4 row 9</div>
-        </div>
-        <div class="col-8">
-            <div class="flex-item-style">col-8 row 9</div>
-        </div>
-    </div>
-    <div class="flex-row">
-        <div class="col-5">
-            <div class="flex-item-style">col-5 row 10</div>
-        </div>
-        <div class="col-7">
-            <div class="flex-item-style">col-7 row 10</div>
-        </div>
-    </div>
-    <div class="flex-row">
-        <div class="col-4">
-            <div class="flex-item-style">col-4 row 11 (overflow)</div>
-        </div>
-        <div class="col-9">
-            <div class="flex-item-style">col-9 row 11 (overflow)</div>
-        </div>
-    </div>
-</div>
+</main>
 
 
 <a href="#" class="btn btn-danger">danger!</a>
