add rendering datatable

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet/less" type="text/css" href="styles/modal.less"/>
   <link rel="stylesheet/less" type="text/css" href="styles/burger.less"/>
   <link rel="stylesheet/less" type="text/css" href="styles/slider.less"/>
+  <link rel="stylesheet/less" type="text/css" href="styles/dataTable.less"/>
 
 
 </head>
@@ -300,6 +301,10 @@
   </div>
 </section>
 
+<section class="table-section">
+  <div id="user-table"></div>
+</section>
+
 
 <script src="//cdnjs.cloudflare.com/ajax/libs/less.js/3.9.0/less.min.js"></script>
 <script src="https://kit.fontawesome.com/a92211bf3b.js" crossorigin="anonymous"></script>
@@ -307,6 +312,7 @@
 <script src="js/modal.js"></script>
 <script src="js/burger.js"></script>
 <script src="js/slider.js"></script>
+<script src="js/dataTable.js"></script>
 
 </body>
 </html>
