--- a/index.html
+++ b/index.html
@@ -35,227 +35,6 @@
     </nav>
   </div>
 </header>
-<div class="container-fluid">
-  <div class="flex-row">
-    <div class="col-1">
-      <div class="flex-item-style">
-        col-1 row-1
-      </div>
-    </div>
-    <div class="col-1">
-      <div class="flex-item-style">
-        col-1 row-1
-      </div>
-    </div>
-    <div class="col-1">
-      <div class="flex-item-style">
-        col-1 row-1
-      </div>
-    </div>
-    <div class="col-1">
-      <div class="flex-item-style">
-        col-1 row-1
-      </div>
-    </div>
-    <div class="col-1">
-      <div class="flex-item-style">
-        col-1 row-1
-      </div>
-    </div>
-    <div class="col-1">
-      <div class="flex-item-style">
-        col-1 row-1
-      </div>
-    </div>
-    <div class="col-1">
-      <div class="flex-item-style">
-        col-1 row-1
-      </div>
-    </div>
-    <div class="col-1">
-      <div class="flex-item-style">
-        col-1 row-1
-      </div>
-    </div>
-    <div class="col-1">
-      <div class="flex-item-style">
-        col-1 row-1
-      </div>
-    </div>
-    <div class="col-1">
-      <div class="flex-item-style">
-        col-1 row-1
-      </div>
-    </div>
-    <div class="col-1">
-      <div class="flex-item-style">
-        col-1 row-1
-      </div>
-    </div>
-    <div class="col-1">
-      <div class="flex-item-style">
-        col-1 row-1
-      </div>
-    </div>
-  </div>
-  <div class="flex-row">
-    <div class="col-2">
-      <div class="flex-item-style">
-        col-2 row-2
-      </div>
-    </div>
-    <div class="col-2">
-      <div class="flex-item-style">
-        col-2 row-2
-      </div>
-    </div>
-    <div class="col-2">
-      <div class="flex-item-style">
-        col-2 row-2
-      </div>
-    </div>
-    <div class="col-2">
-      <div class="flex-item-style">
-        col-2 row-2
-      </div>
-    </div>
-    <div class="col-2">
-      <div class="flex-item-style">
-        col-2 row-2
-      </div>
-    </div>
-    <div class="col-2">
-      <div class="flex-item-style">
-        col-2 row-2
-      </div>
-    </div>
-  </div>
-  <div class="flex-row">
-    <div class="col-3">
-      <div class="flex-item-style">
-        col-3 row-3
-      </div>
-    </div>
-    <div class="col-3">
-      <div class="flex-item-style">
-        col-3 row-3
-      </div>
-    </div>
-    <div class="col-3">
-      <div class="flex-item-style">
-        col-3 row-3
-      </div>
-    </div>
-    <div class="col-3">
-      <div class="flex-item-style">
-        col-3 row-3
-      </div>
-    </div>
-  </div>
-  <div class="flex-row">
-    <div class="col-4">
-      <div class="flex-item-style">
-        col-4 row 4
-      </div>
-    </div>
-    <div class="col-4">
-      <div class="flex-item-style">
-        col-4 row 4
-      </div>
-    </div>
-    <div class="col-4">
-      <div class="flex-item-style">
-        col-4 row 4
-      </div>
-    </div>
-  </div>
-  <div class="flex-row">
-    <div class="col-6">
-      <div class="flex-item-style">
-        col-6 row 5
-      </div>
-    </div>
-    <div class="col-6">
-      <div class="flex-item-style">
-        col-6 row 5
-      </div>
-    </div>
-  </div>
-  <div class="flex-row">
-    <div class="col-12">
-      <div class="flex-item-style">
-        col-12 row 6
-      </div>
-    </div>
-  </div>
-  <div class="flex-row">
-    <div class="col-1">
-      <div class="flex-item-style">col-1 row 7</div>
-    </div>
-    <div class="col-11">
-      <div class="flex-item-style">col-11 row 7</div>
-    </div>
-  </div>
-  <div class="flex-row">
-    <div class="col-2">
-      <div class="flex-item-style">col-2 row 8</div>
-    </div>
-    <div class="col-10">
-      <div class="flex-item-style">col-10 row 8</div>
-    </div>
-  </div>
-  <div class="flex-row">
-    <div class="col-3">
-      <div class="flex-item-style">col-3 row 9</div>
-    </div>
-    <div class="col-9">
-      <div class="flex-item-style">col-9 row 9</div>
-    </div>
-  </div>
-  <div class="flex-row">
-    <div class="col-4">
-      <div class="flex-item-style">col-4 row 9</div>
-    </div>
-    <div class="col-8">
-      <div class="flex-item-style">col-8 row 9</div>
-    </div>
-  </div>
-  <div class="flex-row">
-    <div class="col-5">
-      <div class="flex-item-style">col-5 row 10</div>
-    </div>
-    <div class="col-7">
-      <div class="flex-item-style">col-7 row 10</div>
-    </div>
-  </div>
-  <div class="flex-row">
-    <div class="col-4">
-      <div class="flex-item-style">col-4 row 11 (overflow)</div>
-    </div>
-    <div class="col-9">
-      <div class="flex-item-style">col-9 row 11 (overflow)</div>
-    </div>
-  </div>
-</div>
-
-
-<section>
-  <a href="#" class="btn btn-danger">danger!</a>
-  <button type="button" class="btn btn-primary">primary</button>
-  <button type="submit" class="btn btn-warning">warning</button>
-  <div class="btn btn-success">success</div>
-  <span class="btn btn-dark">dark</span>
-  <label for="danger">Input button: </label>
-  <input type="button" id="danger" value="danger" class="btn btn-danger">
-  <button type="button" class="btn btn-outline-primary">outline primary</button>
-  <button type="submit" class="btn btn-outline-success">outline success</button>
-  <a href="#" class="btn btn-outline-warning">outline warning</a>
-  <span class="btn btn-outline-dark">outline dark</span>
-  <div class="btn btn-outline-info">outline info</div>
-  <button type="button" class="btn btn-success" disabled>disabled button</button>
-  <a href="#" class="btn btn-outline-dark" aria-disabled="true">disabled link</a>
-  <button class="btn btn-primary active">primary active</button>
-</section>
 
 <button class="btn btn-outline-dark" type="button" data-modal-target="#modal">Open modal</button>
 <div class="modal" id="modal">
@@ -312,7 +91,8 @@
 <script src="js/modal.js"></script>
 <script src="js/burger.js"></script>
 <script src="js/slider.js"></script>
-<script src="js/dataTable.js"></script>
+<script type="module" src="js/table.js"></script>
+<script type="module" src="js/dataTable.js"></script>
 
 </body>
 </html>
