add section for modal

--- a/index.html
+++ b/index.html
@@ -35,8 +35,10 @@
     </nav>
   </div>
 </header>
+<section>
+	<button class="btn btn-outline-dark" type="button" data-modal-target="#modal">Open modal</button>
+</section>
 
-<button class="btn btn-outline-dark" type="button" data-modal-target="#modal">Open modal</button>
 <div class="modal" id="modal">
   <div class="modal-header">
     <h2>Modal window is just opened</h2>
