make modal center

--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
   </div>
 </div>
 
-<div class="modal modal-top" id="modal2">
+<div class="modal" id="modal2">
   <div class="modal-header">
     <h2>Another one</h2>
     <button data-close-button class="close-button">&times;</button>
