--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
   <link rel="stylesheet/less" type="text/css" href="styles/slider.less"/>
   <link rel="stylesheet/less" type="text/css" href="styles/dataTable.less"/>
 
-
+	<script type="module" src="js/table.js" async></script>
+	<script type="module" src="js/dataTable.js" async></script>
 </head>
 <body>
 
@@ -81,18 +82,17 @@
 </section>
 
 <section class="table-section">
-  <div id="user-table"></div>
+  <div id="user-table">
+		<button type="button" class="btn btn-outline-success" data-modal-target>Добавить</button>
+	</div>
 </section>
 
 
 <script src="//cdnjs.cloudflare.com/ajax/libs/less.js/3.9.0/less.min.js"></script>
 <script src="https://kit.fontawesome.com/a92211bf3b.js" crossorigin="anonymous"></script>
-
 <script src="js/modal.js"></script>
 <script src="js/burger.js"></script>
 <script src="js/slider.js"></script>
-<script type="module" src="js/table.js"></script>
-<script type="module" src="js/dataTable.js"></script>
 
 </body>
 </html>
