--- a/index.html
+++ b/index.html
@@ -95,12 +95,11 @@
 			:key="q.title"
 			:type="q.type"
 			:title="q.title"
-			:pattern="q.pattern"
 			@input="q.value = $event"
 			:placeholder="q.placeholder"
 			:required="q.required"
-			:validationRegExp="q.validationRegExp"
-			:errorMessage="q.errorMessage"
+			:validation-reg-exp="q.validationRegExp"
+			:error-message="q.errorMessage"
 		/>
 	</div>
 </section>
@@ -123,7 +122,7 @@
 					placeholder: "John",
 					required: true,
 					validationRegExp: /[A-Za-z]+/,
-					errorMessage: 'Your name contains not only of letters'
+					errorMessage: 'Please provide only letters'
 				},
 				{
 					title: "Age",
@@ -132,7 +131,7 @@
 					type: "number",
 					required: true,
 					validationRegExp: /^[+]?\d+$/,
-					errorMessage: 'Your age contains of negative number'
+					errorMessage: 'Please provide only positive numbers'
 				},
 				{
 					title: "Email",
@@ -140,7 +139,7 @@
 					placeholder: "john@example.com",
 					required: true,
 					validationRegExp: /^[a-zA-Z0-9.!#$%&’*+/=?^_`{|}~-]+@[a-zA-Z0-9-]+(?:\.[a-zA-Z0-9-]+)*$/,
-					errorMessage: 'Your email contains'
+					errorMessage: 'Please provide a valid email address.'
 				}
 			]
 		}
