--- a/my-ui-library/public/index.html
+++ b/my-ui-library/public/index.html
@@ -14,4 +14,5 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
+  <script src="https://kit.fontawesome.com/a92211bf3b.js" crossorigin="anonymous"></script>
 </html>
